--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_auth: ^3.0.1
+  cloud_firestore: ^2.4.0
+  provider: ^5.0.0
+  fluttertoast: ^8.0.7
+  curved_navigation_bar: ^1.0.1
 
 dev_dependencies:
   flutter_test:
